--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-zoom-pan-pinch": "^3.6.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
